Bookmarkandshare - Reorder CSS alphabetically for readability, correct comments, correct fluid.log, shorten checking of checkboxes function, internationalization implementations

--- a/devwidgets/bookmarkandshare/css/bookmarkandshare.css
+++ b/devwidgets/bookmarkandshare/css/bookmarkandshare.css
@@ -1,23 +1,23 @@
 /* GENERAL */
-hr {display: block; clear: left; margin:0; visibility: hidden;}
+.bookmarkandshare_hr {clear: left; display: block; margin:0; visibility: hidden;}
 
 /* SETTINGS */
-.bookmarkandshare_servicechk {float:left; clear:left; padding:0 7px 7px 0;}
-.bookmarkandshare_servicelbl {float:left; padding:0 0 7px 7px; cursor:pointer;}
-.bookmarkandshare_service_icon {float:left; display:block;}
+.bookmarkandshare_servicechk {clear:left; float:left; padding:0 7px 7px 0;}
+.bookmarkandshare_servicelbl {cursor:pointer; float:left; padding:0 0 7px 7px;}
+.bookmarkandshare_service_icon {display:block; float:left;}
 .dialog_buttons {padding-top:7px;}
 
 /* AddThis override*/
-.at300bs {margin-right:7px;}
+#bookmarkandshare_share_button .at300bs, #bookmarkandshare_settings_content .at300bs {margin-right:7px;}
 
-#bookmarkandshare_select_all_services {font-size:12px; text-decoration:underline; color:#205cb5; clear:both; margin-bottom:7px; display:block;}
+#bookmarkandshare_select_all_services {clear:both; color:#205cb5; display:block; font-size:12px; margin-bottom:7px; text-decoration:underline;}
 
 /* SHARE BUTTON */
-#bookmarkandshare_share_button {background-color:#d6dbdf; font-size:15px; font-weight:bold; padding:3px 0 0 7px; height:25px; margin-top:13px;}
+#bookmarkandshare_share_button {background-color:#d6dbdf; font-size:15px; font-weight:bold; height:25px; margin-top:13px; padding:3px 0 0 7px;}
 #bookmarkandshare_share_button p {float:left; padding-right:13px;}
 #bookmarkandshare_share_button span {float:left; margin-top:3px;}
-.at_item {float:left;}
-.addthis_button img{padding-left:17px; margin-top:3px;}
+#bookmarkandshare_share_button .at_item {float:left;}
+#bookmarkandshare_share_button .addthis_button img{margin-top:3px; padding-left:17px;}
 
 /* ERRORS */
 .bookmarkandshare_error {color:#EE0000;}
